--- a/layout/etc/sysctl.d/99-sysctl.conf
+++ b/layout/etc/sysctl.d/99-sysctl.conf
@@ -56,3 +56,7 @@ net.ipv4.conf.default.log_martians = 1
 
 net.ipv6.conf.all.accept_redirects = 0
 net.ipv6.conf.default.accept_redirects = 0
+
+# Docker
+net.ipv4.conf.all.forwarding = 1
+net.ipv6.conf.all.forwarding = 1
